@@ -2,7 +2,7 @@
 php_flag	display_errors	Off
 php_flag	log_errors	On
 php_value	error_log	logs/errors
-php_value	upload_max_filesize	2M
+php_value	upload_max_filesize	5M
 
 <FilesMatch "(\.inc|\~)$">
   Order allow,deny
