@@ -338,7 +338,7 @@ html>body*#messagecontframe
 {
   position: absolute;
   left: 20px;
-  width: 160px;
+  width: 170px;
   bottom: 20px;
   height: 16px;
   overflow: hidden;
